--- a/client/src/resources/locales/translation_pt.json
+++ b/client/src/resources/locales/translation_pt.json
@@ -26,7 +26,7 @@
     },
     "general": {
       "card": {
-        "live-view": "Visualização ao Vivo"
+        "live-view": "Vista ao Vivo"
       }
     },
     "sections": {
