Download CV implemented and Language context changes

--- a/client/src/resources/locales/translation_en.json
+++ b/client/src/resources/locales/translation_en.json
@@ -10,7 +10,11 @@
       "navBar": {
         "about": "About",
         "work": "Work",
-        "contact": "Contact"
+        "contact": "Contact",
+        "context-menu": {
+          "resume": "Resume",
+          "language": "Language"
+        }
       }
     },
     "controls": {
