--- a/client/src/resources/locales/translation_ge.json
+++ b/client/src/resources/locales/translation_ge.json
@@ -10,7 +10,11 @@
       "navBar": {
         "about": "Über",
         "work": "Arbeit",
-        "contact": "Kontakt"
+        "contact": "Kontakt",
+        "context-menu": {
+          "resume": "Fasst zusammen",
+          "language": "Sprache"
+        }
       }
     },
     "controls": {
