--- a/client/src/resources/locales/translation_pt.json
+++ b/client/src/resources/locales/translation_pt.json
@@ -10,7 +10,11 @@
       "navBar": {
         "about": "Sobre",
         "work": "Trabalho",
-        "contact": "Contato"
+        "contact": "Contato",
+        "context-menu": {
+          "resume": "Curricula",
+          "language": "Linguagem"
+        }
       }
     },
     "controls": {
